added first two presentational react components

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "watch": "webpack --watch",
     "start": "webpack-dev-server --hot --inline"
   },
-  "babel":{
-    "presets":["es2015"]
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "react-redux": "^5.0.6",
     "redux": "^3.7.1"
   }
 }
