--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.1"
   }
