Fixed build problems. JSX support was missing, added webpack-preset-babel-react dependency.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "webpack-preset": "^0.2.0",
+    "webpack-preset-babel": "^0.2.0",
+    "webpack-preset-babel-react": "^0.2.0"
   }
 }
